Add logic to detail view view model. Add enabled property to disabel/enable user interface. Code cleanup, add some // MARK:.

--- a/11_VIEW/Main.storyboard
+++ b/11_VIEW/Main.storyboard
@@ -108,6 +108,9 @@
                                 <state key="normal" title="LOOK UP MAC ADDRESS">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonLookUpAction:" destination="Yec-kt-yz8" eventType="touchUpInside" id="vYd-cL-UwI"/>
+                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="RESULTS" translatesAutoresizingMaskIntoConstraints="NO" id="eDi-6D-f6q">
                                 <rect key="frame" x="20" y="211" width="560" height="369"/>
